--- a/css/index.css
+++ b/css/index.css
@@ -123,7 +123,7 @@ section{
   }
 }
 
-#Gamer > .row{
+#Casque > .row, #Gamer > .row, #Philosophy > .row{
   margin-left: 0px;
   margin-right: 0px;
 }
