--- a/css/index.css
+++ b/css/index.css
@@ -111,7 +111,7 @@ section{
     font-size: 1em;
     letter-spacing: normal;
 }
-.brand{
+  .brand{
     letter-spacing: 0em;
     font-weight: 1em;
 }
@@ -120,6 +120,10 @@ section{
 @media screen and (max-width:500px) {
     #Casque img, #Gamer img, #Philosophy img{
       width: 100%;
+
+      .title{
+        letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -130,5 +134,5 @@ section{
 
 #Casque p{
   color: red;
-  
+
 }
