--- a/css/index.css
+++ b/css/index.css
@@ -126,6 +126,10 @@ section{
     }
 }
 
+.img-fluid{
+  height: unset;
+}
+
 #Casque > .row, #Gamer > .row, #Philosophy > .row{
   margin-left: 0px;
   margin-right: 0px;
