--- a/css/index.css
+++ b/css/index.css
@@ -117,6 +117,12 @@ section{
 }
 }
 
+@media screen and (max-width:600px) {
+  .timer{
+    font-size: 60px;
+  }
+}
+
 @media screen and (max-width:500px) {
     #Casque img, #Gamer img, #Philosophy img{
       width: 100%;
