--- a/css/product.css
+++ b/css/product.css
@@ -103,6 +103,16 @@
     background-position: center;
   }
 
+  #btn-commander{
+    background-color: black;
+    color: white;
+    padding: 5px 15px;
+    border-radius: 20px;
+    border: 2px solid #FFFFFF;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.33);
+    margin-top: 20px;
+  }
+
   /* Responsive */
 @media (max-width: 940px) {
     .container-product {
