--- a/css/index.css
+++ b/css/index.css
@@ -141,10 +141,11 @@ section{
   margin-right: 0px;
 }
 
-input[type="date"]::before{
-  content: attr(placeholder)" : ";
+input[type="date"]::before {
+  content: attr(placeholder) " : ";
   white-space: pre;
 }
-input[type="date"]:focus::before {
-  content:""!important;
+
+input[type="date"].no-placeholder::before {
+  content: "" !important;
 }
