--- a/css/product.css
+++ b/css/product.css
@@ -96,6 +96,9 @@
   .color-choose input[type="radio"]#orange + label span {
     background-color: #e29e24;
   }
+  .color-choose input[type="radio"]#purple + label span {
+    background-color: #0E3960;
+  }
    
   .color-choose input[type="radio"]:checked + label span {
     background-image: url(../images/check-icn.svg);
