--- a/css/index.css
+++ b/css/index.css
@@ -159,3 +159,8 @@ input[type="date"].no-placeholder::before {
   width: 50%;
   padding: 20px;
 }
+
+.gras{
+  font-weight: bold;
+  color: black;
+}
